install_ingress/ingress-nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-nodeport
  namespace: ingress-nginx
  labels:
    app: nodeport
spec:
  selector:
    app.kubernetes.io/component: controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
