install_ingress/networc-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic
  namespace: ingress-nginx
spec:
  podSelector: {}  # Применить политику ко всем подам
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 9443
        - protocol: TCP
          port: 8443
